<resources>
    <string name="app_name">Heels</string>
    <string name="text_username">User</string>
    <string name="text_username_hint">user@domain.com</string>
    <string name="text_password">Password</string>
    <string name="text_password_hint">**************</string>
    <string name="button_login">Login</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_introduction">Introduction</string>
    <string name="text_platon">Platón fue un filósofo griego seguidor de Sócrates y
        maestro de Aristóteles. En 387 a. C. fundó la Academia de Atenas,
        institución que continuaría a lo largo de más de novecientos años
        y a la que Aristóteles acudiría desde Estagira a estudiar filosofía alrededor del 367 a.</string>
    <string name="text_error">ERROR</string>
    <string name="text_error_message">Invalid Username or Password</string>
    <string name="text_action_search">Search</string>
    <string name="text_action_settings">Settings</string>
    <string name="text_action_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>